"Bugs corrigidos: fix(auth): resolve jwt conflict, rate limiting, unused deps and env vars
- Remove 'iss' from payload; jsonwebtoken rejects duplicate with signOptions.issuer
- Register ThrottlerGuard globally via APP_GUARD in app.module.ts
- Add missing env vars: ALLOWED_AUDIENCES, JWT_ISSUER, JWT_KID, ALLOWED_ORIGINS
- Remove unused jwtIssuer field and constructor param (redundant after iss fix)
- Remove unused privateKey injection (JwtModule handles key internally)
- Remove unused tenantRepo; tenant now loaded via relations on userRepo

Validation: health, jwks, login, refresh, logout, rate-limit (429 on 10th),
isSafeRedirect 7/7, forgot-password anti-enumeration — all passing"

--- a/backend/.env
+++ b/backend/.env
@@ -12,5 +12,20 @@ PORT=3000
 DOMAIN=zonadev.tech
 NODE_ENV=development
 
+# Security
+ALLOWED_AUDIENCES=renowa.zonadev.tech
+ALLOWED_ORIGINS=http://localhost:3001
+
+# JWT
+JWT_KID=zonadev-2026-01
+JWT_ISSUER=auth.zonadev.tech
+
+# Email (SMTP) — configure para uso real
+MAIL_HOST=smtp.example.com
+MAIL_PORT=587
+MAIL_USER=noreply@zonadev.tech
+MAIL_PASS=change_me
+MAIL_FROM=ZonaDev Auth <noreply@zonadev.tech>
+
 # Seed
 SEED_ADMIN_PASSWORD=Zeroamor982310@
